--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    list-style-type: none;
+    padding: 0;
 }
 
 .song {
@@ -24,6 +26,7 @@ body {
     margin: 5px;
     border: 1px solid #ccc;
     cursor: pointer;
+    user-select: none;
 }
 
 button {
@@ -41,4 +44,8 @@ button:hover {
 #result {
     margin-top: 20px;
     font-weight: bold;
+}
+
+.song.dragging {
+    opacity: 0.5;
 }
