--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header {
     background-color: #f1f1f1;
     border-radius: 5px;
     text-align: center;
-    height: 40px; /* Uniform height */
+    height: 40px;
     box-sizing: border-box;
 }
 
