--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #ff6347; /* Festive red */
+    background-color: #b22222; /* Deeper Christmas red */
     color: white;
     padding: 20px;
     text-align: center;
@@ -19,14 +19,14 @@ header:before {
     content: "🎄";
     position: absolute;
     left: 20px;
-    font-size: 2em;
+    font-size: 3em; /* Increased size of the tree icon */
 }
 
 header:after {
     content: "🎄";
     position: absolute;
     right: 20px;
-    font-size: 2em;
+    font-size: 3em; /* Increased size of the tree icon */
 }
 
 #container {
@@ -110,7 +110,7 @@ button:hover {
     font-size: 18px;
     font-weight: bold;
     margin-top: 20px;
-    color: #ff6347; /* Match header red */
+    color: #b22222; /* Match header red */
 }
 
 /* Snowflake decorations */
